[tool.poetry]
name = "combined-config"
version = "0.1.0"
description = ""
authors = ["Mitchell Burton <mitch@mitchellburton.ca>"]
readme = "README.md"
packages = [{include = "combined_config"}]

[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
